<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    tools:context=".ui.activities.DetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="parallax">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgDetailUser"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                app:civ_border_width="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_circle_account" />

            <TextView
                android:id="@+id/tvDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imgDetailUser"
                app:layout_constraintStart_toStartOf="@+id/imgDetailUser"
                app:layout_constraintTop_toBottomOf="@+id/imgDetailUser" />

            <TextView
                android:id="@+id/textDetailUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tvDetailName"
                app:layout_constraintStart_toStartOf="@+id/tvDetailName"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

            <include
                android:id="@+id/userInfo"
                layout="@layout/info_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDetailUsername" />

            <include
                android:id="@+id/userAmount"
                layout="@layout/amount_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userInfo" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/userAmount"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar_detail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            app:layout_collapseMode="pin">-->

<!--            <ImageView-->
<!--                android:id="@+id/btnBack"-->
<!--                style="@style/Theme.AppCompat.Light"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:contentDescription="@string/back_button"-->
<!--                android:src="@drawable/ic_arrow_back" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvToolbar"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="20sp"-->
<!--                tools:text="Detail User" />-->
<!--        </androidx.appcompat.widget.Toolbar>-->
    </com.google.android.material.appbar.CollapsingToolbarLayout>
</com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:contentDescription="@string/add_to_favorite"
        android:visibility="invisible"
        app:borderWidth="3dp"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior" />

    <LinearLayout
        android:id="@+id/lytProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.core.widget.ContentLoadingProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>